major rewrite of the website - collapsable design, different layout, various other fixes

--- a/main.css
+++ b/main.css
@@ -2,26 +2,51 @@
     a:link {
         color: gray;
     }
-    
+
     a:visited {
         color: gray;
     }
 
-    u.dotted{
-      	border-bottom: 1px dashed #999;
+    u.dotted {
+      	border-bottom: 0px dashed #999;
       	text-decoration: none; 
     }
     
-    body {
-        padding: 0;
-        font-family: Courier, sans-serif;
-        font-size: 15px;
+    td {
+        font-family: monospace;	
+        font-size: 18px;
         color: #555;
     }
-    
-    td, th {
-        font-family: Courier, sans-serif;
-        text-align: center;
+
+    .button {
+        background-color: white;
+        border: none;
+        padding: 0;
+        background: none;
+    }
+
+    .collapsible {
+        background-color: white;
+        border: none;
+        padding: 0;
+        background: none;
+        font-family: monospace;	
+        background-color: white;
+        cursor: pointer;
+        width: 100%;
+        outline: none;
+        font-size: 18px;
+        text-align: left;
     }
     
+    .active, .collapsible:hover {
+      background-color: white;
+    }
+    
+    .content {
+      padding: 0 10px;
+      display: none;
+      overflow: hidden;
+      background-color: white;
+    }
 </style>
